fix navigation on mobile........again

--- a/theme/assets/css/ff3l.less
+++ b/theme/assets/css/ff3l.less
@@ -423,11 +423,9 @@ body {
 
     ul.sidebar-links {
         li {
-            width: ~"calc(100% - 5px)";
             padding-left: 5px !important;
         }
         li.child {
-            width: ~"calc(100% - 15px)";
             padding-left: 15px !important;
         }
     }
